[gd_scene load_steps=3 format=3 uid="uid://coxtaamc2uajc"]

[ext_resource type="Script" path="res://Scenes/UI/ui.gd" id="1_636u5"]
[ext_resource type="PackedScene" uid="uid://jphrdc4g8of5" path="res://Scenes/UI/market_item.tscn" id="1_s86y4"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_636u5")
metadata/_edit_lock_ = true

[node name="Market" type="GridContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -307.0
offset_top = -277.0
offset_right = 307.0
grow_horizontal = 2
grow_vertical = 0
columns = 3
metadata/_edit_use_anchors_ = true

[node name="MarketItem" parent="UI/Market" instance=ExtResource("1_s86y4")]
layout_mode = 2

[node name="MarketItem2" parent="UI/Market" instance=ExtResource("1_s86y4")]
layout_mode = 2

[node name="MarketItem3" parent="UI/Market" instance=ExtResource("1_s86y4")]
layout_mode = 2
